# pacoia

./: .gitignore  .mypy.ini  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: Build.yml  CI.yml  Format.yml  Tests.yml  TypeChecking.yml  mypy.yml  pylint.yml
config/: config.json
data/academic/: signposts.txt
resources/op_rubric/: opforllm.xlsx
resources/prompts/1/: improvements.md  prompt.md
resources/prompts/2/: improvements.md  prompt.md
resources/samples/evaluated-transcriptions/: 10_reviewed.xlsx  11_reviewed.xlsx  12_reviewed.xlsx  1_reviewed.xlsx  2_reviewed.xlsx  3_reviewed.xlsx  5_reviewed.xlsx  6_reviewed.xlsx  7_reviewed.xlsx  8_reviewed.xlsx  9_reviewed.xlsx
resources/samples/raw-transcriptions/: 4.yml
resources/samples/samples/: 1.yml  10.yml  12.yml  16.yml  18.yml  19.yml  2.yml  3.yml  4.yml  6.yml
resources/samples/transcriptions/: 11.yml  13.yml  14.yml  15.yml  17.yml  20.yml  5.yml  7.yml  8.yml  9.yml
resources/samples/video/: video_samples
src/: Utils.py  main.py
src/controller/: Controller.py
src/model/: SpeechData.py
src/model/asr/: CrisperWhisperManager.py  WhisperManager.py  WhisperPeer.py
src/model/audio/: AudioAnalyzer.py  AudioConstants.py  AudioDataPlotter.py  AudioFeedback.py  AudioManager.py  AudioMessages.py
src/model/llm/: LLMPeer.py
src/model/text/: LexicalRichnessConstants.py  (+5 more)
src/utils/: Utils.py
src/view/: CrisperWhisperInterface.py  Interface.py  WhisperInterface.py
test/: test_model_audio_AudioDataPlotter.py  test_model_text_TextDataPlotter.py
(+56 files in other folders)
